--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             </div> <!-- main-txt -->
 
-            <img src="imgs/profile.jpg" alt="portfolio image" width="300px" class="profile-img">
+            <img src="imgs/profile.jpeg" alt="portfolio image" width="300px" class="profile-img">
 
         </div> <!-- main -->
 
